WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199635
Stopping a cloned MediaStream video track should not stop any other video track
https://bugs.webkit.org/show_bug.cgi?id=199635
Summary
Stopping a cloned MediaStream video track should not stop any other video track
youenn fablet
Reported
2019-07-09 12:33:26 PDT
Stopping a cloned MediaStream video track should not stop any other video track
Attachments
Patch
(8.39 KB, patch)
2019-07-09 14:13 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-07-09 14:13:51 PDT
Created
attachment 373763
[details]
Patch
EWS Watchlist
Comment 2
2019-07-09 14:16:27 PDT
Attachment 373763
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/mediastream/RealtimeMediaSource.h:236: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 3
2019-07-11 16:49:48 PDT
Comment on
attachment 373763
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=373763&action=review
> Source/WebCore/platform/mediastream/RealtimeMediaSource.h:112 > + virtual void requestToEnd(Observer& callingObserver);
Is this change necessary?
youenn fablet
Comment 4
2019-07-12 10:12:15 PDT
Comment on
attachment 373763
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=373763&action=review
>> Source/WebCore/platform/mediastream/RealtimeMediaSource.h:112 >> + virtual void requestToEnd(Observer& callingObserver); > > Is this change necessary?
Unfortunately yes. We might want to improve the model at some point to remove this.
WebKit Commit Bot
Comment 5
2019-07-12 10:27:59 PDT
Comment on
attachment 373763
[details]
Patch Clearing flags on attachment: 373763 Committed
r247391
: <
https://trac.webkit.org/changeset/247391
>
WebKit Commit Bot
Comment 6
2019-07-12 10:28:01 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2019-07-12 10:28:15 PDT
<
rdar://problem/53015111
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug